Add experimentalObjectRestSpread to eslint config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,11 @@
         "es6": true,
         "node": true
     },
+    "parserOptions": {
+      "ecmaFeatures": {
+        "experimentalObjectRestSpread":true
+      }
+    },
     "extends": "eslint:recommended",
     "rules": {
         "indent": [2, 2],
