--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "AdalabWebStarterKit",
-	"version": "2.0.0",
+	"version": "2.0.2",
 	"description": "Adalab web starter kit",
 	"dependencies": {
 		"browser-sync": "^2.26.3",
@@ -11,14 +11,13 @@
 		"gulp-clean-css": "*",
 		"gulp-combine-mq": "*",
 		"gulp-concat": "*",
-    "gulp-html-partial": "^1.0.1",
+		"gulp-html-partial": "^1.0.1",
 		"gulp-notify": "*",
 		"gulp-plumber": "*",
 		"gulp-rename": "*",
-		"gulp-sass": "*",
+		"gulp-sass": "4.0.2",
 		"gulp-sourcemaps": "*",
 		"gulp-uglify": "*",
-		"gulp-util": "*",
 		"gulp-zip": "*",
 		"run-sequence": "*"
 	},
