--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "icons": {
     "src": "_src/assets/icons/*.*",
     "dest": "public/",
-    "dist": "public/"
+    "dist": "docs/"
   },
   "html": {
     "src": "_src/templates/*.html",
