Added docs scripts to package.json

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
 	},
 	"scripts": {
 		"start": "gulp",
+		"docs": "rm -rf docs && gulp docs",
+		"push-docs": "rm -rf docs && gulp docs && git add docs/* && git commit -m \"Update docs\" && git push",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"repository": {
