Added debugger warning to eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,7 +16,7 @@
         "semi": [2, "always"],
         "eqeqeq": 2,
         "strict": [2, "global"],
-
+        "no-debugger": 1,
         "no-console": 1,
         "array-callback-return": 1,
         "block-scoped-var": 1,
