Updated npm dependencies version

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-	"name": "AdalabWebStarterKit",
+	"name": "adalab-web-starter-kit",
 	"version": "2.0.2",
 	"description": "Adalab web starter kit",
 	"dependencies": {
-		"browser-sync": "^2.26.3",
-		"del": "^3.0.0",
-		"eslint": "^4.19.1",
-		"gulp": "^4",
+		"browser-sync": "^2.26.7",
+		"del": "^5.1.0",
+		"eslint": "^6.8.0",
+		"gulp": "^4.0.2",
 		"gulp-autoprefixer": "*",
 		"gulp-clean-css": "*",
 		"gulp-combine-mq": "*",
@@ -15,9 +15,9 @@
 		"gulp-notify": "*",
 		"gulp-plumber": "*",
 		"gulp-rename": "*",
-		"gulp-sass": "4.0.2",
+		"gulp-sass": "^4.0.2",
 		"gulp-sourcemaps": "*",
-		"gulp-uglify-es": "^1.0.4",
+		"gulp-uglify-es": "^2.0.0",
 		"gulp-zip": "*",
 		"run-sequence": "*"
 	},
