Update kit to node 12

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
 		"run-sequence": "*"
 	},
 	"scripts": {
-		"start": "gulp",
+		"start": "./node_modules/.bin/gulp",
 		"docs": "rm -rf docs && gulp docs",
 		"push-docs": "rm -rf docs && gulp docs && git add docs/* && git commit -m \"Update docs\" && git push",
 		"deploy": "npm run push-docs"
