--- a/package.json
+++ b/package.json
@@ -3,28 +3,32 @@
 	"version": "3.0.1",
 	"description": "Adalab web starter kit",
 	"dependencies": {
-		"browser-sync": "^2.26.12",
-		"del": "^5.1.0",
-		"eslint": "^7.1.0",
+		"browser-sync": "2.26.14",
+		"del": "^6.0.0",
+		"eslint": "^8.10.0",
 		"gulp": "^4.0.2",
-		"gulp-autoprefixer": "*",
-		"gulp-clean-css": "*",
-		"gulp-combine-mq": "*",
-		"gulp-concat": "*",
+		"gulp-autoprefixer": "^8.0.0",
+		"gulp-clean-css": "^4.3.0",
+		"gulp-combine-mq": "0.4.0",
+		"gulp-concat": "^2.6.1",
 		"gulp-html-tag-include": "^1.0.1",
-		"gulp-notify": "*",
-		"gulp-plumber": "*",
-		"gulp-rename": "*",
-		"gulp-sass": "^5.0.0",
-		"gulp-sourcemaps": "*",
-		"gulp-uglify-es": "^2.0.0",
-		"gulp-zip": "*",
-		"node-sass": "^6.0.1",
-		"run-sequence": "*",
-		"sass": "^1.35.2"
+		"gulp-notify": "^4.0.0",
+		"gulp-plumber": "^1.2.1",
+		"gulp-rename": "^2.0.0",
+		"gulp-sass": "^5.1.0",
+		"gulp-sourcemaps": "^3.0.0",
+		"gulp-uglify-es": "^3.0.0",
+		"gulp-zip": "^5.1.0",
+		"node-sass": "^7.0.1",
+		"run-sequence": "^2.2.1",
+		"sass": "^1.49.9"
 	},
 	"devDependencies": {
 		"lodash.template": ">=4.5.0"
+	},
+	"overrides": {
+		"browser-sync-client": "2.26.14",
+		"browser-sync-ui": "2.26.14"
 	},
 	"scripts": {
 		"start": "./node_modules/.bin/gulp",
