Add vite dependencies and config.

--- a/.gitignore
+++ b/.gitignore
@@ -33,15 +33,20 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-# Node logs
+# Logs
 logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
 # Dependency directories
 node_modules/
+dist
+dist-ssr
+*.local
 
 # Sass
 .sass-cache/
@@ -54,4 +59,12 @@ node_modules/
 public
 
 # vscode
-.vscode
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
