--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vite-plugin-image-optimizer": "^1.1.7"
 	},
 	"scripts": {
+    "start": "vite",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
