Add clean previous build to build command

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 	"scripts": {
     "start": "vite",
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --emptyOutDir",
     "preview": "vite preview"
 	},
 	"repository": {
