--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "start": "vite",
     "dev": "vite",
     "build": "vite build --emptyOutDir",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "push-docs": "npm run deploy",
+    "deploy": "vite build --emptyOutDir && git add docs && git commit -m 'Deployed new version of the page to production' && git push"
 	},
 	"repository": {
 		"type": "git",
