Add docs command

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "start": "vite",
     "dev": "vite",
     "build": "vite build --emptyOutDir",
+    "docs": "vite build --emptyOutDir",
     "preview": "vite preview",
     "push-docs": "npm run deploy",
     "deploy": "vite build --emptyOutDir && git add docs && git commit -m 'Deployed new version of the page to production' && git push"
